Add `I18nProvider` with locale management, translations, and multi-language support

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!doctype html>
-<html lang="sk">
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Časopriestorové médium – hra života</title>
+    <title>Spacetime Medium – Game of Life</title>
   </head>
   <body>
     <div id="root"></div>
