Add site metadata, favicons, and web manifest for improved branding and sharing capabilities

--- a/index.html
+++ b/index.html
@@ -3,7 +3,42 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <link rel="icon" href="/favicon.ico" sizes="any" />
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png" />
+    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16.png" />
+    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+    <link rel="manifest" href="/site.webmanifest" />
+    <meta name="theme-color" content="#0b0d10" />
+
     <title>Spacetime Medium – Game of Life</title>
+    <meta
+      name="description"
+      content="Game of Life rozšírená o vizuálne „médium“: vlnové pole s pamäťou, prahovou nukleáciou a (experimentálnou) antihmotou."
+    />
+
+    <meta property="og:title" content="Spacetime Medium – Game of Life" />
+    <meta
+      property="og:description"
+      content="Game of Life rozšírená o vizuálne „médium“: vlnové pole s pamäťou, prahovou nukleáciou a (experimentálnou) antihmotou."
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="/" />
+    <meta property="og:site_name" content="Conoway" />
+    <meta property="og:locale" content="sk_SK" />
+    <meta property="og:image" content="/og-image.png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta property="og:image:alt" content="Conoway – Spacetime Medium" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Spacetime Medium – Game of Life" />
+    <meta
+      name="twitter:description"
+      content="Game of Life rozšírená o vizuálne „médium“: vlnové pole s pamäťou, prahovou nukleáciou a (experimentálnou) antihmotou."
+    />
+    <meta name="twitter:image" content="/og-image.png" />
   </head>
   <body>
     <div id="root"></div>
